player z-index issue on ff

--- a/less/app.less
+++ b/less/app.less
@@ -1279,7 +1279,7 @@ h1,h2,h3,h4,h5,h6 {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: 300;
+	z-index: 500;
 
 	> .container-fluid {
 		padding: 0;
@@ -1374,6 +1374,7 @@ h1,h2,h3,h4,h5,h6 {
 	height: 5rem;
 	background: #2A2A39;
 	line-height: 5rem;
+    z-index: 500;
 
 	.controls {
 		vertical-align: middle;
